# skicka

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain
src/: main.rs
